# sqa-knowledge-base

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 908138e3c1b2_initial_schema.py  b3a7d1c2e0f4_hnsw_index_document_chunks.py  c8e2f5a1d3b6_gin_fts_index_document_chunks.py  d4f9a8e2b1c3_multi_tenant_projects.py  e5b9c4f7a2d8_documentation_sessions.py
apps/backend/scripts/: eval_rag.py  reindex_all.py
apps/backend/src/sqa_kb/: __init__.py  config.py  main.py
apps/backend/src/sqa_kb/adapters/: __init__.py
apps/backend/src/sqa_kb/agent/: __init__.py  cost.py  graph.py  markdown_generator.py  skills.py  state.py  tools.py
apps/backend/src/sqa_kb/api/: auth.py  dashboard.py  dependencies.py  documentation_sessions.py  documents.py  health.py  ingestion.py  messages.py  project_taxonomy.py  projects.py  queries.py  sessions.py  taxonomy.py
apps/backend/src/sqa_kb/documents/: __init__.py  anonymizer.py  branding.py  doc_types.py  filename.py  models.py
apps/backend/src/sqa_kb/domain/: __init__.py  entities.py  errors.py  value_objects.py
apps/backend/src/sqa_kb/middleware/: __init__.py  error_handler.py  request_id.py
apps/backend/src/sqa_kb/observability/: __init__.py  logging.py
apps/backend/src/sqa_kb/ports/: __init__.py  gateways.py  repositories.py
apps/backend/src/sqa_kb/rag/: __init__.py  chunker.py  context_header.py  eval.py  (+4 more)
apps/backend/tests/: conftest.py  test_agent_cost.py  test_agent_graph.py  test_agent_markdown.py  test_agent_nodes.py  test_agent_nodes_capture.py  test_agent_nodes_consultation.py  test_agent_nodes_ingestion.py  test_agent_skills.py  test_agent_state.py  test_agent_templates.py  test_agent_tools.py  test_api_ingestion.py  test_api_project_taxonomy.py  test_api_projects.py  test_api_queries.py  test_checkpointer_dsn.py  test_config.py  test_documentation_session_service.py  test_documents_anonymizer.py  test_documents_branding.py  test_documents_extractors.py  test_documents_filename.py  test_documents_generators.py  test_documents_generators_office.py  test_domain.py  test_embeddings_cohere.py  test_embeddings_pricing.py  test_health.py  test_ingestion_service.py  test_ingestion_worker.py  test_llm_anthropic_direct.py  test_llm_edge_cases.py  test_llm_pricing.py  test_middleware.py  test_project_service.py  test_project_taxonomy_service.py  test_projects_domain.py  test_rag_chunker.py  test_rag_context_header.py  (+8 more)
apps/backend/tests/fixtures/: eval_set.jsonl
apps/backend/tests/integration/: conftest.py  test_api_queries_pg.py  test_auth.py  test_blob_azure.py  test_checkpointer_postgres.py  test_chunks_repo_pg.py  test_endpoints.py  test_messages_endpoint.py  test_rag_hybrid_search_pg.py  test_rag_retriever_pg.py  test_repos.py
(+289 files in other folders)
