[project]
name = "sqa-kb-backend"
version = "0.1.0"
description = "SQA Knowledge Base — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Fase 2 — agente conversacional
    "anthropic>=0.40.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.28",
    "jinja2>=3.1.4",
    "psycopg[binary,pool]>=3.2.0",
    # Fase 3 — RAG vectorial
    "cohere>=5.13.0",
    "langchain-text-splitters>=0.3.4",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "httpx>=0.28.1",
    "ruff>=0.8.6",
    "mypy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqa_kb"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Mantener el mismo event loop entre tests de la misma sesión. Necesario
# para que fixtures session-scoped (engine de DB, factory) no rompan con
# "Future attached to a different loop" entre tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    # Python 3.14 marca como deprecated la policy API que usamos en Windows
    # para forzar SelectorEventLoop (psycopg async lo necesita). Migramos
    # cuando 3.16 lo elimine — hasta entonces es la única forma de hacer
    # esto antes de que pytest-asyncio cree el loop.
    "ignore:'asyncio.WindowsSelectorEventLoopPolicy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.set_event_loop_policy' is deprecated:DeprecationWarning",
]
